--- a/app/global.css
+++ b/app/global.css
@@ -18,14 +18,14 @@ a {
   margin: 0;
 }
 
-main {
+/* main {
   min-height: 100vh;
   padding: 1rem 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-}
+} */
 
 input, textarea { 
   display: block;
